--- a/src/components/MeasurementsForm.module.css
+++ b/src/components/MeasurementsForm.module.css
@@ -1,7 +1,7 @@
 .inputForm {
   display: grid;
   gap: 1.5rem;
-  grid-template-columns: repeat(3, 1fr);
+  grid-template-columns: repeat(2, 1fr);
   background-color: #232740;
   margin: 50px 60px 10px 60px;
   border-radius: 10px;
@@ -29,8 +29,10 @@
 }
 
 .submitButton {
+  margin: 30px;
   padding: 8px;
-  width: 100px;
+  width: 80px;
+  height: 40px;
   background-color: #8777f2;
   box-shadow: 10px 5px 5px rgba(0, 0, 0, 0.123);
   color: rgb(255, 255, 255);
@@ -50,4 +52,15 @@
 .invalid {
   border-color: red;
   background: #964141;
+}
+
+.datawrapper {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+}
+
+.errormassage {
+  color: red;
+  font-size: x-small;
 }
